--- a/src/Laminas/Mezzio/Composer/Resources/templates/laminas-view-home-page.phtml
+++ b/src/Laminas/Mezzio/Composer/Resources/templates/laminas-view-home-page.phtml
@@ -1,33 +1,33 @@
 <?php $this->headTitle('Home'); ?>
 
 <div class="jumbotron">
-    <h1>Welcome to <span class="zf-green">zend-expressive</span></h1>
+    <h1>Welcome to <span class="api-tools-green">mezzio</span></h1>
     <p>
         Congratulations! You have successfully installed the
-        <a href="https://github.com/zendframework/zend-expressive-skeleton" target="_blank">zend-expressive skeleton application</a>.
+        <a href="https://github.com/mezzio/mezzio-skeleton" target="_blank">mezzio skeleton application</a>.
         This skeleton can serve as a simple starting point for you to begin building your application.
     </p>
     <p>
-        Expressive builds on zend-stratigility to provide a minimalist PSR-7 middleware framework for PHP.
+        Mezzio builds on laminas-stratigility to provide a minimalist PSR-7 middleware framework for PHP.
     </p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
         <h2>
-            <a href="https://zend-expressive.readthedocs.org/en/latest/features/" target="_blank">
+            <a href="https://mezzio.readthedocs.org/en/latest/features/" target="_blank">
                 <i class="fa fa-refresh"></i> Agile &amp; Lean
             </a>
         </h2>
         <p>
-            Expressive is fast, small and perfect for rapid application development, prototyping and api's. You decide how you
+            Mezzio is fast, small and perfect for rapid application development, prototyping and api's. You decide how you
             extend it and choose the best packages from major framework or standalone projects.
         </p>
     </div>
 
     <div class="col-md-4">
         <h2>
-            <a href="https://github.com/zendframework/zend-diactoros" target="_blank">
+            <a href="https://github.com/laminas/laminas-diactoros" target="_blank">
                 <i class="fa fa-exchange"></i> HTTP Messages
             </a>
         </h2>
@@ -40,7 +40,7 @@
 
     <div class="col-md-4">
         <h2>
-            <a href="https://github.com/zendframework/zend-stratigility" target="_blank">
+            <a href="https://github.com/laminas/laminas-stratigility" target="_blank">
                 <i class="fa fa-dot-circle-o"></i> Middleware
             </a>
         </h2>
@@ -56,13 +56,13 @@
 <div class="row">
     <div class="col-md-4">
         <h2>
-            <a href="https://zend-expressive.readthedocs.org/en/latest/container/intro/" target="_blank">
+            <a href="https://mezzio.readthedocs.org/en/latest/container/intro/" target="_blank">
                 <i class="fa fa-cube"></i> Containers
             </a>
         </h2>
         <p>
-            Expressive promotes and advocates the usage of Dependency Injection/Inversion of Control containers
-            when writing your applications. Expressive supports multiple containers which typehints against
+            Mezzio promotes and advocates the usage of Dependency Injection/Inversion of Control containers
+            when writing your applications. Mezzio supports multiple containers which typehints against
             <a href="https://github.com/container-interop/container-interop" target="_blank">container-interop</a>.
         </p>
     </div>
@@ -74,22 +74,22 @@
             </a>
         </h2>
         <p>
-            One fundamental feature of zend-expressive is that it provides mechanisms for implementing dynamic
-            routing, a feature required in most modern web applications. Expressive ships with multiple adapters.
+            One fundamental feature of mezzio is that it provides mechanisms for implementing dynamic
+            routing, a feature required in most modern web applications. Mezzio ships with multiple adapters.
             Learn more about <a href="<?php echo $this->routerExtUrl ?>" target="_blank"><?php echo $this->routerName ?></a>.
         </p>
     </div>
 
     <div class="col-md-4">
         <h2>
-            <a href="https://zend-expressive.readthedocs.org/en/latest/template/zend-view/" target="_blank">
-                <i class="fa fa-files-o"></i> Zend\View
+            <a href="https://mezzio.readthedocs.org/en/latest/template/laminas-view/" target="_blank">
+                <i class="fa fa-files-o"></i> Laminas\View
             </a>
         </h2>
         <p>
-            Zend\View provides the View layer of Zend Framework 2's MVC system. It is a multi-tiered system
+            Laminas\View provides the View layer of Laminas's MVC system. It is a multi-tiered system
             allowing a variety of mechanisms for extension, substitution, and more.
-            Learn more about <a href="http://framework.zend.com/manual/current/en/modules/zend.view.quick-start.html" target="_blank">zend-view</a>.
+            Learn more about <a href="https://docs.laminas.dev/laminas.view.quick-start.html" target="_blank">laminas-view</a>.
         </p>
     </div>
 </div>
