--- a/src/Laminas/Mezzio/Composer/Resources/templates/plates-home-page.phtml
+++ b/src/Laminas/Mezzio/Composer/Resources/templates/plates-home-page.phtml
@@ -1,33 +1,33 @@
 <?php $this->layout('layout::default', ['title' => 'Home']) ?>
 
 <div class="jumbotron">
-    <h1>Welcome to <span class="zf-green">zend-expressive</span></h1>
+    <h1>Welcome to <span class="api-tools-green">mezzio</span></h1>
     <p>
         Congratulations! You have successfully installed the
-        <a href="https://github.com/zendframework/zend-expressive-skeleton" target="_blank">zend-expressive skeleton application</a>.
+        <a href="https://github.com/mezzio/mezzio-skeleton" target="_blank">mezzio skeleton application</a>.
         This skeleton can serve as a simple starting point for you to begin building your application.
     </p>
     <p>
-        Expressive builds on zend-stratigility to provide a minimalist PSR-7 middleware framework for PHP.
+        Mezzio builds on laminas-stratigility to provide a minimalist PSR-7 middleware framework for PHP.
     </p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
         <h2>
-            <a href="https://zend-expressive.readthedocs.org/en/latest/features/" target="_blank">
+            <a href="https://mezzio.readthedocs.org/en/latest/features/" target="_blank">
                 <i class="fa fa-refresh"></i> Agile &amp; Lean
             </a>
         </h2>
         <p>
-            Expressive is fast, small and perfect for rapid application development, prototyping and api's. You decide how you
+            Mezzio is fast, small and perfect for rapid application development, prototyping and api's. You decide how you
             extend it and choose the best packages from major framework or standalone projects.
         </p>
     </div>
 
     <div class="col-md-4">
         <h2>
-            <a href="https://github.com/zendframework/zend-diactoros" target="_blank">
+            <a href="https://github.com/laminas/laminas-diactoros" target="_blank">
                 <i class="fa fa-exchange"></i> HTTP Messages
             </a>
         </h2>
@@ -40,7 +40,7 @@
 
     <div class="col-md-4">
         <h2>
-            <a href="https://github.com/zendframework/zend-stratigility" target="_blank">
+            <a href="https://github.com/laminas/laminas-stratigility" target="_blank">
                 <i class="fa fa-dot-circle-o"></i> Middleware
             </a>
         </h2>
@@ -56,13 +56,13 @@
 <div class="row">
     <div class="col-md-4">
         <h2>
-            <a href="https://zend-expressive.readthedocs.org/en/latest/container/intro/" target="_blank">
+            <a href="https://mezzio.readthedocs.org/en/latest/container/intro/" target="_blank">
                 <i class="fa fa-cube"></i> Containers
             </a>
         </h2>
         <p>
-            Expressive promotes and advocates the usage of Dependency Injection/Inversion of Control containers
-            when writing your applications. Expressive supports multiple containers which typehints against
+            Mezzio promotes and advocates the usage of Dependency Injection/Inversion of Control containers
+            when writing your applications. Mezzio supports multiple containers which typehints against
             <a href="https://github.com/container-interop/container-interop" target="_blank">container-interop</a>.
         </p>
     </div>
@@ -74,15 +74,15 @@
             </a>
         </h2>
         <p>
-            One fundamental feature of zend-expressive is that it provides mechanisms for implementing dynamic
-            routing, a feature required in most modern web applications. Expressive ships with multiple adapters.
+            One fundamental feature of mezzio is that it provides mechanisms for implementing dynamic
+            routing, a feature required in most modern web applications. Mezzio ships with multiple adapters.
             Learn more about <a href="<?=$this->e($routerExtUrl)?>" target="_blank"><?=$this->e($routerName)?></a>.
         </p>
     </div>
 
     <div class="col-md-4">
         <h2>
-            <a href="https://zend-expressive.readthedocs.org/en/latest/template/plates/" target="_blank">
+            <a href="https://mezzio.readthedocs.org/en/latest/template/plates/" target="_blank">
                 <i class="fa fa-files-o"></i> Plates Template Engine
             </a>
         </h2>
